--- a/home.html
+++ b/home.html
@@ -18,13 +18,13 @@
                 <img class="logo-icon" src="images/logo.png" alt="logo">
                 <span class="logo-text">My learning journal</span>
             </div>
-            <ul>
-                <li>Home</li>
-                <li>About me</li> 
+            <ul class="hidden" id="nav-list">
+                <li><a class="nav-link" href="">Home</a></li>
+                <li><a class="nav-link" href="">About</a></li> 
             </ul>
-            <!-- <div>
-                <i class="fa-solid fa-bars"></i>
-            </div> -->
+            <div>
+                <i class="fa-solid fa-bars" id="toggle-btn"></i>
+            </div>
         </nav>
     </header>
     <section class="hero-section">
