changed layout for the wide screens

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                 <li><a class="nav-link" href="">Home</a></li>
                 <li><a class="nav-link" href="">About</a></li> 
             </ul>
-            <div>
+            <div class="toggle-btn">
                 <i class="fa-solid fa-bars" id="toggle-btn"></i>
             </div>
         </nav>
