adapted layout for wider screens

--- a/about.html
+++ b/about.html
@@ -41,9 +41,16 @@
             <p>I started simple and gradually grew my learning journal site. I would take notes about what I was learning. After each learning session, I'd use my notes to not only reflect on what I learned but also write short summaries of what I learned using my own words.</p>
             <p>That helped me grok what I was learning, and I realized that posting my learning summaries was also helping others learn and stay motivated.</p>
         </article>
+        <h3>Recent posts</h3>
     </section>
     <section class="posts">
     </section>
+
+    <footer>
+        <span class="logo-text footer-text">My learning journal</span>
+        <p class="footer-text">Copyright ©2022</p>
+    </footer>
+
     <script src="index.js" type="module"></script>
 </body>
 </html>
