added style for navbar on the large screens

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
                 <span class="logo-text">My learning journal</span>
             </div>
             <ul class="hidden active" id="nav-list">
-                <li><a class="nav-link" href="">Home</a></li>
-                <li><a class="nav-link" href="">About</a></li> 
+                <li><a class="nav-link" href="home.html">Home</a></li>
+                <li><a class="nav-link" href="">Blog</a></li> 
             </ul>
             <div class="toggle-btn">
                 <i class="fa-solid fa-bars" id="toggle-btn"></i>
