--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
             </div>
             <ul class="hidden active" id="nav-list">
                 <li><a class="nav-link" href="">Home</a></li>
-                <li><a class="nav-link" href="">About</a></li> 
+                <li><a class="nav-link" href="about.html">About</a></li> 
             </ul>
             <div class="toggle-btn">
                 <i class="fa-solid fa-bars" id="toggle-btn"></i>
